# lib/boleto_api.rb
@@ -20,6 +20,7 @@ require_relative 'boleto_api/services/remessa_service'
 require_relative 'boleto_api/services/retorno_service'
 require_relative 'boleto_api/services/nosso_numero_extractor'
 require_relative 'boleto_api/services/ofx_parser_service'
+require_relative 'boleto_api/services/bank_info_service'
 require_relative 'boleto_api/middleware/error_handler'
 require_relative 'boleto_api/middleware/request_logger'
 require_relative 'boleto_api/endpoints/health_endpoint'
@@ -27,6 +28,7 @@ require_relative 'boleto_api/endpoints/boleto_endpoint'
 require_relative 'boleto_api/endpoints/remessa_endpoint'
 require_relative 'boleto_api/endpoints/retorno_endpoint'
 require_relative 'boleto_api/endpoints/ofx_endpoint'
+require_relative 'boleto_api/endpoints/docs_endpoint'
 
 module BoletoApi
   class << self
@@ -63,5 +65,6 @@ module BoletoApi
     mount Endpoints::RemessaEndpoint
     mount Endpoints::RetornoEndpoint
     mount Endpoints::OFXEndpoint
+    mount Endpoints::DocsEndpoint
   end
 end
